--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="/css/app.ceafc9ba.css" rel="preload" as="style" />
     <link href="/js/app.9c9d1930.js" rel="preload" as="script" />
     <link href="/js/chunk-vendors.934d9fde.js" rel="preload" as="script" />
-    <link href="/css/app.ceafc9ba.css" rel="stylesheet" />
+    <link href="https://loving-wescoff-cc45de.netlify.app/css/app.ceafc9ba.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
@@ -19,8 +19,8 @@
       ></noscript
     >
     <div id="app"></div>
-    <script src="/js/chunk-vendors.934d9fde.js"></script>
-    <script src="/js/app.9c9d1930.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="https://loving-wescoff-cc45de.netlify.app/js/chunk-vendors.934d9fde.js"></script>
+    <script src="https://loving-wescoff-cc45de.netlify.app/js/app.9c9d1930.js"></script>
+    <script src="https://loving-wescoff-cc45de.netlify.app/js/main.js"></script>
   </body>
 </html>
